docs/pages/versions/v56.0.0/sdk/ui/jetpack-compose/row.mdx
---
modificationDate: May 19, 2026
title: Row
description: A Jetpack Compose Row component for placing children horizontally.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Row`](../universal/row) — it renders the appropriate native component per platform.

Expo UI Row matches the official Jetpack Compose [Row](https://developer.android.com/reference/kotlin/androidx/compose/foundation/layout/package-summary#Row) API and places children horizontally with configurable arrangement and alignment.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/row/android-light.webp"
  darkSrc="/static/images/expo-ui/row/android-dark.webp"
  alt="Three colored boxes laid out horizontally inside a Row"
/>

## Installation

<APIInstallSection />

## Usage

`Row` places children horizontally. Use `horizontalArrangement` and `verticalAlignment` to control spacing and alignment.

```tsx RowExample.tsx
import { Host, Row, Text } from '@expo/ui/jetpack-compose';
import { fillMaxWidth, height } from '@expo/ui/jetpack-compose/modifiers';

export default function RowExample() {
  return (
    <Host matchContents>
      <Row
        horizontalArrangement="spaceEvenly"
        verticalAlignment="center"
        modifiers={[fillMaxWidth(), height(60)]}>
        <Text>Item 1</Text>
        <Text>Item 2</Text>
        <Text>Item 3</Text>
      </Row>
    </Host>
  );
}
```

## API

```tsx
import { Row } from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/row" apiName="Row" />
