docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/row.mdx
---
title: Row
description: A Jetpack Compose Row component for placing children horizontally.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Row`](../universal/row) — it renders the appropriate native component per platform.

Expo UI Row matches the official Jetpack Compose [Row](https://developer.android.com/reference/kotlin/androidx/compose/foundation/layout/package-summary#Row) API and places children horizontally with configurable arrangement and alignment.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/row/android-light.webp"
  darkSrc="/static/images/expo-ui/row/android-dark.webp"
  alt="Three colored boxes laid out horizontally inside a Row"
/>

## Installation

<APIInstallSection />

## Usage

`Row` places children horizontally. Use `horizontalArrangement` and `verticalAlignment` to control spacing and alignment.

<ComponentExample
  title="RowExample.tsx"
  src="/static/images/expo-ui/examples/row-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/row-basic-android-dark.webp"
  alt="Three labels spread evenly across the width of a row">

```tsx
import {
  Host,
  Row,
  Text,
  useMaterialColors,
} from '@expo/ui/jetpack-compose';
import {
  fillMaxWidth,
  height,
} from '@expo/ui/jetpack-compose/modifiers';

export default function RowExample() {
  const colors = useMaterialColors();

  return (
    <Host style={{ flex: 1 }}>
      <Row
        horizontalArrangement="spaceEvenly"
        verticalAlignment="center"
        modifiers={[fillMaxWidth(), height(60)]}>
        <Text style={{ fontSize: 28 }} color={colors.onBackground}>
          Item 1
        </Text>
        <Text style={{ fontSize: 28 }} color={colors.onBackground}>
          Item 2
        </Text>
        <Text style={{ fontSize: 28 }} color={colors.onBackground}>
          Item 3
        </Text>
      </Row>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Row } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/row"
  apiName="Row"
/>
